--- a/files/transmission-daemon/settings.json
+++ b/files/transmission-daemon/settings.json
@@ -40,14 +40,14 @@
     "ratio-limit": 1,
     "ratio-limit-enabled": true,
     "rename-partial-files": true,
-    "rpc-authentication-required": true,
+    "rpc-authentication-required": false,
     "rpc-bind-address": "0.0.0.0",
     "rpc-enabled": true,
-    "rpc-password": "@password@",
+    "rpc-password": "password",
     "rpc-port": 9091,
     "rpc-url": "/transmission/",
     "rpc-username": "transmission",
-    "rpc-whitelist": "127.0.0.1",
+    "rpc-whitelist": "nginx-proxy",
     "rpc-whitelist-enabled": false,
     "scrape-paused-torrents-enabled": true,
     "script-torrent-done-enabled": false,
